--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <h1>{{ title }}</h1>
 
 <ul>
-  <li *ngFor = "let todo of todos">{{ todo }}</li>
+
+  <li *ngFor = "let todo of todos"> 
+    {{ todo.id }}. 
+    {{ todo.title }} |
+    <button *ngIf = "!todo.done">Concluir</button> |
+    <button *ngIf = "todo.done">Refazer</button> |
+    <button>Remover</button> |
+
+  </li>
+
 </ul>
