Adicionando métodos para alterar a tela, implementando a lógica do botão de remover algo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     {{ todo.title }} |
     <button *ngIf = "!todo.done">Concluir</button> |
     <button *ngIf = "todo.done">Refazer</button> |
-    <button>Remover</button> |
+    <button (click) = "remove(todo)">Remover</button> |
 
   </li>
 
