--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <h1>{{ title }}</h1>
 
 <ul>
-  <p *ngIf = "todos.length==0">
+  <p *ngIf = "tasks.length==0">
     <small>Nenhuma tarefa hoje.</small>
   </p>
-  <li *ngFor = "let todo of todos"> 
+  <li *ngFor = "let todo of tasks"> 
     {{ todo.id }}º 
     {{ todo.title }} |
     <button *ngIf = "!todo.done" (click) = "markAsDone(todo)">Concluir</button> |
